# notabene

./: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js
assets/: tailwind.css
assets/styling/: main.css
src/: main.rs
src/bars/: mod.rs  sidebar.rs  statusbar.rs  topbar.rs
